--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
   text-align: center;
   color: white;
   padding-bottom: 10px;
-  padding-top: 10px;
+  padding-top: 150px;
  
 }
 
@@ -53,6 +53,19 @@ float: right;
 padding-top: -80px;
 
 }
+
+.me{
+
+  float: right;
+  padding-bottom: 200px;
+ 
+  
+  
+  }
+
+
+
+
 
 
 .title{
