--- a/main.css
+++ b/main.css
@@ -1,16 +1,18 @@
 .header{
   
   background-color: maroon;
-  text-align: center;
   color: white;
-  padding-bottom: 10px;
-  padding-top: 150px;
- 
+  padding-bottom: 70px;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .header h1{
 
 text-decoration: underline;
+text-align: center;
+
+
 
 }
 
@@ -40,31 +42,6 @@ text-decoration: underline;
 }
 
 
-.about-me {
-  
-  font-size: 20px;
-  
-}
-
-
-.logo{
-
-float: right;
-padding-top: -80px;
-
-}
-
-.me{
-
-  float: right;
-  padding-bottom: 200px;
- 
-  
-  
-  }
-
-
-
 
 
 
@@ -73,6 +50,12 @@ padding-top: -80px;
   font-weight: bold;
   color: white;
   text-decoration: underline;
+  text-align: left;
+}
+
+p {
+
+  padding-left: 10px;
 }
 
 .socials {
